usergroup added to user manager

--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/desktop/components/PersistedUserTableListPanel.html
@@ -22,7 +22,7 @@
             </thead>
 			<tr wicket:id="userList">
 				<td>
-					<span wicket:id="username">-1</span>
+				<a wicket:id="linkToEditUser"/>
 				</td>
 				<td>
 					<span wicket:id="groups">-1</span>
