--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.callouts" value="##Mon Dec 30 08:46:00 ART 2013"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="169"/>
+	<property name="ireport.y" value="171"/>
 	<parameter name="bilateralToAYear" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="bilateralToFYear" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="multilateralYear" class="net.sf.jasperreports.engine.JasperReport"/>
@@ -29,7 +29,7 @@ FROM [Financial]]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="130" splitType="Stretch">
+		<band height="166" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="1" width="555" height="15" uuid="b2847462-8dc7-42d4-a144-53fa5129a91f"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
@@ -45,65 +45,129 @@ FROM [Financial]]]>
 				<text><![CDATA[(2012 Edition)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="32" width="159" height="23" uuid="d971475c-3ae3-4306-800d-edad48554bf8"/>
+				<reportElement x="0" y="32" width="118" height="23" uuid="d971475c-3ae3-4306-800d-edad48554bf8"/>
 				<textElement>
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporting Country:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="297" y="32" width="130" height="25" uuid="7f64e3e1-16c4-49f6-8568-3307a1043be8"/>
+				<reportElement x="297" y="32" width="130" height="13" uuid="7f64e3e1-16c4-49f6-8568-3307a1043be8"/>
 				<textElement>
-					<font size="12" isBold="false" isItalic="true"/>
+					<font fontName="Arial" size="10" isBold="false" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Exchange rates used]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="463" y="57" width="58" height="15" uuid="2c4a8cb4-0274-457a-8ced-05603e84aeb2"/>
+				<reportElement x="463" y="45" width="58" height="15" uuid="2c4a8cb4-0274-457a-8ced-05603e84aeb2"/>
 				<textElement>
 					<font size="10" isBold="false" isItalic="false"/>
 				</textElement>
 				<text><![CDATA[1 $ U.S. =]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="100" width="107" height="15" uuid="1b63871e-604e-4c71-b49a-8fab9e500103"/>
+				<reportElement x="0" y="136" width="107" height="15" uuid="1b63871e-604e-4c71-b49a-8fab9e500103"/>
 				<textElement verticalAlignment="Top">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DISBURSEMENTS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="393" y="100" width="154" height="15" uuid="c839ccf7-3877-4dda-9b0a-d76ab6e374b8"/>
+				<reportElement x="380" y="136" width="154" height="15" uuid="c839ccf7-3877-4dda-9b0a-d76ab6e374b8"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="Arial" size="12" isBold="false"/>
+					<font fontName="Arial" size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Millions US dollars]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="367" y="57" width="96" height="15" uuid="d202c553-1036-4bf8-8299-8b94584b521a"/>
+				<reportElement x="367" y="45" width="96" height="15" uuid="d202c553-1036-4bf8-8299-8b94584b521a"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FIRST_YEAR}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="463" y="72" width="58" height="15" uuid="1c387a29-2663-4745-8005-d4f7cf8f625f"/>
+				<reportElement x="463" y="60" width="58" height="15" uuid="1c387a29-2663-4745-8005-d4f7cf8f625f"/>
 				<textElement>
 					<font size="10" isBold="false" isItalic="false"/>
 				</textElement>
 				<text><![CDATA[1 $ U.S. =]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="367" y="72" width="96" height="15" uuid="7b01d2b4-1752-4d07-91ac-b08533bdec6e"/>
+				<reportElement x="367" y="60" width="96" height="15" uuid="7b01d2b4-1752-4d07-91ac-b08533bdec6e"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{SECOND_YEAR}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="297" y="151" width="52" height="15" uuid="8422c3e6-a07a-4041-96a5-b6678fa8b527"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Row]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="455" y="106" width="100" height="14" uuid="9f1a26a5-dbd6-44bb-8b80-ec043b9c1fc9"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{SECOND_YEAR}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="355" y="106" width="100" height="14" uuid="d71ade2d-2a16-4b8c-acbd-f127f86352f6"/>
+				<box leftPadding="0">
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="0.0"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FIRST_YEAR}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="355" y="91" width="100" height="15" uuid="0f7ad486-4820-4d35-af49-708198fdf975"/>
+				<box leftPadding="0">
+					<pen lineWidth="0.0"/>
+					<topPen lineWidth="0.0"/>
+					<leftPen lineWidth="0.0"/>
+					<bottomPen lineWidth="0.0"/>
+					<rightPen lineWidth="0.0"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Top">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[1140]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="455" y="91" width="100" height="15" uuid="4076164a-f007-4161-b44f-cfe03760aac0"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
+					<font fontName="Arial" size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[1140]]></text>
+			</staticText>
+			<line>
+				<reportElement x="0" y="89" width="555" height="1" uuid="5940c78d-13bb-40aa-b635-d7ec354c9d1f"/>
+			</line>
+			<line>
+				<reportElement x="0" y="165" width="555" height="1" uuid="46f58c61-b96b-468d-8d02-15d4c2a74f48"/>
+			</line>
+			<line>
+				<reportElement x="327" y="120" width="228" height="1" uuid="0e3d7725-3866-4b32-a643-a6c7348b9915"/>
+			</line>
+			<line>
+				<reportElement x="326" y="90" width="1" height="30" uuid="93ea682c-3e78-4596-ab09-e60b91cfba6e"/>
+			</line>
+			<line>
+				<reportElement x="555" y="89" width="1" height="30" uuid="d58c833d-1c32-48d1-b1ce-e2bc54cb4231"/>
+			</line>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="524" splitType="Stretch">
+		<band height="527" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="204" height="20" uuid="301f0e82-d09a-4e11-bc67-b831104674d9"/>
 				<textElement verticalAlignment="Top">
@@ -119,7 +183,7 @@ FROM [Financial]]]>
 				<text><![CDATA[Official Development Assistance, net]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="355" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
+				<reportElement x="354" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
@@ -131,20 +195,6 @@ FROM [Financial]]]>
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Commitments Amount Year 2}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="455" y="0" width="100" height="14" uuid="9f1a26a5-dbd6-44bb-8b80-ec043b9c1fc9"/>
-				<textElement textAlignment="Center">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{SECOND_YEAR}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="355" y="0" width="100" height="14" uuid="d71ade2d-2a16-4b8c-acbd-f127f86352f6"/>
-				<textElement textAlignment="Center">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{FIRST_YEAR}]]></textFieldExpression>
 			</textField>
 			<subreport>
 				<reportElement x="0" y="40" width="555" height="100" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
@@ -189,26 +239,38 @@ FROM [Financial]]]>
 				<subreportExpression><![CDATA[$P{memoSector}]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement x="0" y="492" width="555" height="15" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
+				<reportElement x="0" y="483" width="555" height="15" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{memoDebtRelief}]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement x="0" y="507" width="555" height="15" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
+				<reportElement x="0" y="498" width="555" height="15" uuid="e5f585b8-bdbc-4df5-ac96-513086bdbdba"/>
 				<subreportParameter name="MONDRIAN_CONNECTION">
 					<subreportParameterExpression><![CDATA[$P{MONDRIAN_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA[$P{memoTotalODA}]]></subreportExpression>
 			</subreport>
 			<staticText>
-				<reportElement x="295" y="20" width="54" height="14" uuid="b147f133-2d8c-4378-839a-9ff89a6141f0"/>
+				<reportElement x="298" y="20" width="50" height="14" uuid="b147f133-2d8c-4378-839a-9ff89a6141f0"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="Arial" size="10" isBold="false" isItalic="false"/>
 				</textElement>
 				<text><![CDATA[1010]]></text>
 			</staticText>
+			<line>
+				<reportElement x="0" y="513" width="555" height="1" uuid="25c188a1-eef3-40e1-849c-51935f6f8476"/>
+			</line>
+			<line>
+				<reportElement x="349" y="0" width="1" height="513" uuid="ef101ed3-617e-477c-963d-10f579eccf89"/>
+			</line>
+			<line>
+				<reportElement x="454" y="0" width="1" height="513" uuid="cadacc36-8686-48b8-b6ad-bdd9541076c4"/>
+			</line>
+			<line>
+				<reportElement x="295" y="0" width="2" height="513" uuid="b0979507-b9ca-49dd-b922-4ce0198d5f83"/>
+			</line>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -217,13 +279,6 @@ FROM [Financial]]]>
 	<columnFooter>
 		<band splitType="Stretch"/>
 	</columnFooter>
-	<pageFooter>
-		<band height="37" splitType="Stretch">
-			<line>
-				<reportElement x="0" y="1" width="555" height="1" uuid="ff41f0d2-265c-4f89-b6a3-969b28608d31"/>
-			</line>
-		</band>
-	</pageFooter>
 	<summary>
 		<band splitType="Stretch"/>
 	</summary>
