--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/reports/aq/aq_master.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.callouts" value="##Mon Dec 30 08:46:00 ART 2013"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="171"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="bilateralToAYear" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="bilateralToFYear" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="multilateralYear" class="net.sf.jasperreports.engine.JasperReport"/>
@@ -115,7 +115,7 @@ FROM [Financial]]]>
 				<textFieldExpression><![CDATA[$P{SECOND_YEAR}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="355" y="106" width="100" height="14" uuid="d71ade2d-2a16-4b8c-acbd-f127f86352f6"/>
+				<reportElement x="352" y="106" width="100" height="14" uuid="d71ade2d-2a16-4b8c-acbd-f127f86352f6"/>
 				<box leftPadding="0">
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -129,7 +129,7 @@ FROM [Financial]]]>
 				<textFieldExpression><![CDATA[$P{FIRST_YEAR}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="355" y="91" width="100" height="15" uuid="0f7ad486-4820-4d35-af49-708198fdf975"/>
+				<reportElement x="352" y="91" width="100" height="15" uuid="0f7ad486-4820-4d35-af49-708198fdf975"/>
 				<box leftPadding="0">
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -150,19 +150,22 @@ FROM [Financial]]]>
 				<text><![CDATA[1140]]></text>
 			</staticText>
 			<line>
-				<reportElement x="0" y="89" width="555" height="1" uuid="5940c78d-13bb-40aa-b635-d7ec354c9d1f"/>
+				<reportElement x="0" y="88" width="555" height="1" uuid="5940c78d-13bb-40aa-b635-d7ec354c9d1f"/>
 			</line>
 			<line>
 				<reportElement x="0" y="165" width="555" height="1" uuid="46f58c61-b96b-468d-8d02-15d4c2a74f48"/>
 			</line>
 			<line>
-				<reportElement x="327" y="120" width="228" height="1" uuid="0e3d7725-3866-4b32-a643-a6c7348b9915"/>
+				<reportElement x="349" y="121" width="206" height="1" uuid="0e3d7725-3866-4b32-a643-a6c7348b9915"/>
 			</line>
 			<line>
-				<reportElement x="326" y="90" width="1" height="30" uuid="93ea682c-3e78-4596-ab09-e60b91cfba6e"/>
+				<reportElement x="349" y="90" width="1" height="31" uuid="93ea682c-3e78-4596-ab09-e60b91cfba6e"/>
 			</line>
 			<line>
-				<reportElement x="555" y="89" width="1" height="30" uuid="d58c833d-1c32-48d1-b1ce-e2bc54cb4231"/>
+				<reportElement x="555" y="89" width="1" height="32" uuid="d58c833d-1c32-48d1-b1ce-e2bc54cb4231"/>
+			</line>
+			<line>
+				<reportElement x="453" y="89" width="1" height="32" uuid="7094d931-7aca-4899-bac8-352fde6976b3"/>
 			</line>
 		</band>
 	</title>
@@ -183,7 +186,7 @@ FROM [Financial]]]>
 				<text><![CDATA[Official Development Assistance, net]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="354" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
+				<reportElement x="352" y="20" width="100" height="14" uuid="4150ac15-ec14-4e02-86b2-98311846b6bd"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial"/>
 				</textElement>
@@ -279,6 +282,9 @@ FROM [Financial]]]>
 	<columnFooter>
 		<band splitType="Stretch"/>
 	</columnFooter>
+	<pageFooter>
+		<band height="69"/>
+	</pageFooter>
 	<summary>
 		<band splitType="Stretch"/>
 	</summary>
